--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -159,83 +159,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Lisosia93         5\n",
-       "Iral74            4\n",
-       "Idastidru52       4\n",
-       "Lassilsala30      3\n",
-       "Ilarin91          3\n",
-       "Phaena87          3\n",
-       "Saistyphos30      3\n",
-       "Asur53            3\n",
-       "Inguron55         3\n",
-       "Saedaiphos46      3\n",
-       "Chanastnya43      3\n",
-       "Hiaral50          3\n",
-       "Yathecal82        3\n",
-       "Ialallo29         3\n",
-       "Lisopela58        3\n",
-       "Zontibe81         3\n",
-       "Aelin32           3\n",
-       "Chadolyla44       3\n",
-       "Rarallo90         3\n",
-       "Lisim78           3\n",
-       "Phyali88          3\n",
-       "Siallylis44       3\n",
-       "Hada39            3\n",
-       "Chamjask73        3\n",
-       "Aina42            3\n",
-       "Haillyrgue51      3\n",
-       "Umolrian85        3\n",
-       "Tyisur83          3\n",
-       "Pheodaisun84      3\n",
-       "Iskadarya95       3\n",
-       "                 ..\n",
-       "Liawista80        1\n",
-       "Haerith37         1\n",
-       "Tyananurgue44     1\n",
-       "Aidain51          1\n",
-       "Chadjask77        1\n",
-       "Eudanu84          1\n",
-       "Undimsya85        1\n",
-       "Aellyria80        1\n",
-       "Heollyriap59      1\n",
-       "Aiduesu86         1\n",
-       "Maradaran90       1\n",
-       "Eulae84           1\n",
-       "Alaesu91          1\n",
-       "Shaidanu32        1\n",
-       "Raisty38          1\n",
-       "Frichadar89       1\n",
-       "Assjaskan73       1\n",
-       "Frichaya88        1\n",
-       "Tyaelo67          1\n",
-       "Minduri31         1\n",
-       "Yarithllodeu72    1\n",
-       "Ristydru66        1\n",
-       "Irithlis29        1\n",
-       "Chanosia34        1\n",
-       "Chamadarnya73     1\n",
-       "Yasrisu92         1\n",
-       "Filurarn35        1\n",
-       "Yastyriaphos75    1\n",
-       "Ilassast39        1\n",
-       "Ethralista69      1\n",
-       "Name: SN, Length: 576, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lisosia93        5\n",
+      "Iral74           4\n",
+      "Idastidru52      4\n",
+      "Inguron55        3\n",
+      "Umolrian85       3\n",
+      "Yathecal82       3\n",
+      "Asur53           3\n",
+      "Siallylis44      3\n",
+      "Lisopela58       3\n",
+      "Lassilsala30     3\n",
+      "Zontibe81        3\n",
+      "Aelin32          3\n",
+      "Phaena87         3\n",
+      "Tyidaim51        3\n",
+      "Sondastsda82     3\n",
+      "Lisim78          3\n",
+      "Ialallo29        3\n",
+      "Chamjask73       3\n",
+      "Hiaral50         3\n",
+      "Tyisur83         3\n",
+      "Pheodaisun84     3\n",
+      "Chanastnya43     3\n",
+      "Chamimla85       3\n",
+      "Iskadarya95      3\n",
+      "Silaera56        3\n",
+      "Iri67            3\n",
+      "Haillyrgue51     3\n",
+      "Raesty92         3\n",
+      "Hada39           3\n",
+      "Phyali88         3\n",
+      "                ..\n",
+      "Taeduenu92       1\n",
+      "Idacal95         1\n",
+      "Tyaerith73       1\n",
+      "Eulasuir89       1\n",
+      "Frichosia58      1\n",
+      "Fironon91        1\n",
+      "Tyirinu79        1\n",
+      "Alarap40         1\n",
+      "Eulae84          1\n",
+      "Iathem87         1\n",
+      "Mindetosya30     1\n",
+      "Iduelis31        1\n",
+      "Heollyriap59     1\n",
+      "Lisossa46        1\n",
+      "Styaduen40       1\n",
+      "Hailaphos89      1\n",
+      "Chamimla73       1\n",
+      "Haerithp41       1\n",
+      "Eusri26          1\n",
+      "Assehoan67       1\n",
+      "Haellysu29       1\n",
+      "Lirtassa52       1\n",
+      "Ethralista69     1\n",
+      "Aeri84           1\n",
+      "Aeralria27       1\n",
+      "Lirtastan49      1\n",
+      "Aisur51          1\n",
+      "Iana95           1\n",
+      "Mindirranya33    1\n",
+      "Ililsan66        1\n",
+      "Name: SN, Length: 576, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "purchase_data['SN'].value_counts()"
+    "counts = purchase_data['SN'].value_counts()\n",
+    "print(counts)"
    ]
   },
   {
@@ -681,112 +679,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <td>28</td>\n",
-       "      <td>$2.96</td>\n",
-       "      <td>$82.78</td>\n",
-       "      <td>$3.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15-19</th>\n",
-       "      <td>136</td>\n",
-       "      <td>$3.04</td>\n",
-       "      <td>$412.89</td>\n",
-       "      <td>$3.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>365</td>\n",
-       "      <td>$3.05</td>\n",
-       "      <td>$1,114.06</td>\n",
-       "      <td>$4.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-29</th>\n",
-       "      <td>101</td>\n",
-       "      <td>$2.90</td>\n",
-       "      <td>$293.00</td>\n",
-       "      <td>$3.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>73</td>\n",
-       "      <td>$2.93</td>\n",
-       "      <td>$214.00</td>\n",
-       "      <td>$4.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>41</td>\n",
-       "      <td>$3.60</td>\n",
-       "      <td>$147.67</td>\n",
-       "      <td>$4.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$2.94</td>\n",
-       "      <td>$38.24</td>\n",
-       "      <td>$3.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>23</td>\n",
-       "      <td>$3.35</td>\n",
-       "      <td>$77.13</td>\n",
-       "      <td>$4.54</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Purchase Count Average Purchase Price Total Purchase Value  \\\n",
-       "10-14             28                  $2.96               $82.78   \n",
-       "15-19            136                  $3.04              $412.89   \n",
-       "20-24            365                  $3.05            $1,114.06   \n",
-       "25-29            101                  $2.90              $293.00   \n",
-       "30-34             73                  $2.93              $214.00   \n",
-       "35-39             41                  $3.60              $147.67   \n",
-       "40+               13                  $2.94               $38.24   \n",
-       "<10               23                  $3.35               $77.13   \n",
-       "\n",
-       "      Avg Total Purchase per Person  \n",
-       "10-14                         $3.76  \n",
-       "15-19                         $3.86  \n",
-       "20-24                         $4.32  \n",
-       "25-29                         $3.81  \n",
-       "30-34                         $4.12  \n",
-       "35-39                         $4.76  \n",
-       "40+                           $3.19  \n",
-       "<10                           $4.54  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age\n",
+      "7      32.89\n",
+      "8      25.97\n",
+      "9      18.27\n",
+      "10     31.83\n",
+      "11     18.79\n",
+      "12     15.80\n",
+      "13      9.45\n",
+      "14      6.91\n",
+      "15    105.65\n",
+      "16     90.56\n",
+      "17     64.48\n",
+      "18     82.22\n",
+      "19     69.98\n",
+      "20    314.32\n",
+      "21    180.74\n",
+      "22    206.85\n",
+      "23    201.93\n",
+      "24    210.22\n",
+      "25    181.90\n",
+      "26     40.19\n",
+      "27     27.23\n",
+      "28      8.45\n",
+      "29     35.23\n",
+      "30    110.32\n",
+      "31     24.05\n",
+      "32     22.69\n",
+      "33     34.81\n",
+      "34     22.13\n",
+      "35     52.03\n",
+      "36     12.66\n",
+      "37     25.51\n",
+      "38     34.15\n",
+      "39     23.32\n",
+      "40     16.71\n",
+      "41      6.54\n",
+      "42      3.93\n",
+      "43      4.00\n",
+      "44      5.36\n",
+      "45      1.70\n",
+      "Name: Price, dtype: float64\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "df = purchase_data = pd.read_csv(file_to_load)\n",
+    "bins = pd.cut(df['Age'], [0, 10, 14, 19, 24, 29, 34, 39, 100])\n",
+    "purchase_count = purchase_data.groupby('Age')['Price'].sum()\n",
+    "print(purchase_count)"
+   ]
   },
   {
    "cell_type": "markdown",
